--- a/styles/index.css
+++ b/styles/index.css
@@ -1,199 +1,217 @@
 .body-index {
-    display: grid;
-    grid-template-columns: 1fr 1.75fr;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1.75fr;
+  align-items: center;
 
-    height: 100vh;
-    width: 100vw;
+  height: 100vh;
+  width: 100vw;
 }
-
-
-
 
 /*********** Box 1 **********/
 .box1 {
-    background-color: var(--bg-gray);
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 2.7rem;
+  background-color: var(--bg-gray);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.7rem;
 }
 
-
 .title-login {
-    color: var(--blue-light);
+  color: var(--blue-light);
 }
 
 .title-login h1 {
-    word-spacing: 0.5rem;
-    font-size: 2.5rem;
-    font-weight: 500;
+  word-spacing: 0.5rem;
+  font-size: 2.5rem;
+  font-weight: 500;
 }
 
 .line-box-login {
-    border: 2px solid var(--blue-light);
-    width: 30%;
-    border-radius: 10px;
+  border: 2px solid var(--blue-light);
+  width: 30%;
+  border-radius: 10px;
 }
 
 .box1 img {
-    width: 17rem;
+  width: 17rem;
 }
-
 
 /* Circle Arrow */
 .circle-login {
-    background: rgb(16, 156, 241);
-    background: linear-gradient(196deg, rgba(16, 156, 241, 1) 47%, rgba(0, 0, 0, 1) 100%);
-    padding: 1rem;
-    width: 4.5rem;
-    height: 4.5rem;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background: rgb(16, 156, 241);
+  background: linear-gradient(
+    196deg,
+    rgba(16, 156, 241, 1) 47%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  padding: 1rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    position: absolute;
-    margin-left: calc(100vw - 64vw);
-    margin-bottom: calc(100vh - 67vh);
+  position: absolute;
+  margin-left: calc(100vw - 64vw);
+  margin-bottom: calc(100vh - 67vh);
 }
 
 .circle-login:hover {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(196deg, rgba(0, 0, 0, 1) 0%, rgba(16, 156, 241, 1) 38%);
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    196deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(16, 156, 241, 1) 38%
+  );
 }
 
-
 .circle-login i {
-    font-size: 2rem;
-    color: white;
+  font-size: 2rem;
+  color: white;
 }
 
 /************** Box2 *****************/
 .box2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: var(--blue-light);
-    color: var(--text-light);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: var(--blue-light);
+  color: var(--text-light);
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 2rem;
-    font-size: 1.7rem;
-    width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+  font-size: 1.3rem !important;
+  width: 60%;
 }
 
 .user,
 .password {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  justify-content: center;
 }
 
 .password {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .user input,
 .password input {
-    background-color: var(--blue-light);
-    border: none;
-    border-bottom: 1px solid var(--text-light);
-    color: var(--text-light);
-    padding: 0rem 0.7rem 0rem 0.7rem;
-    outline: none;
-    font-size: 1.3rem;
-    width: 120%;
+  background-color: var(--blue-light);
+  border: none;
+  border-bottom: 1px solid var(--text-light);
+  color: var(--text-light);
+  padding: 0rem 0.7rem 0rem 0.7rem;
+  outline: none;
+  font-size: 1.3rem;
+  width: 120%;
 }
 
 .user input::placeholder,
 .password input::placeholder {
-    color: var(--text-light);
-    opacity: 0.4;
+  color: var(--text-light);
+  opacity: 0.4;
 }
 
 .password-recovery {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .box2 a {
-    color: var(--text-light);
+  color: var(--text-light);
 }
 
 .submit-button {
-    background-color: var(--text-light);
-    border: none;
-    padding: 0.5rem;
-    width: 23%;
-    border-radius: 7px;
-    color: var(--blue-light);
-    font-weight: 700;
-    transition: all 0.2s linear;
+  background-color: var(--text-light);
+  border: none;
+  padding: 0.5rem;
+  width: 23%;
+  border-radius: 7px;
+  color: var(--blue-light);
+  font-weight: 700;
+  transition: all 0.2s linear;
+  font-size: 1rem;
 }
 
 .submit-button:hover {
-    opacity: 1.1;
-    cursor: pointer;
-    transform: scale(1.04);
-    transition: all 0.2s linear;
+  opacity: 1.1;
+  cursor: pointer;
+  transform: scale(1.04);
+  transition: all 0.2s linear;
 }
 
+.message-div {
+  font-size: 0.9rem !important;
+}
 
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px var(--blue-light) inset !important;
+}
+
+/*Change text in autofill textbox*/
+input:-webkit-autofill {
+  -webkit-text-fill-color: var(--text-light) !important;
+}
 
 /*====================== MEDIA QUERY =============================*/
 @media (max-width: 500px) {
-    body {
-        display: flex;
-        flex-direction: column;
-    }
+  body {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .box1,
-    .box2 {
-        width: 100vw;
-    }
+  .box1,
+  .box2 {
+    width: 100vw;
+  }
 
-    .box1 {
-        height: 20vh;
-    }
+  .box1 {
+    height: 20vh;
+  }
 
-    .circle-login {
-        display: none;
-    }
+  .circle-login {
+    display: none;
+  }
 
-    .title-login {
-        display: none;
-    }
+  .title-login {
+    display: none;
+  }
 
-    .box1 {
-        display: none;
-    }
+  .box1 {
+    display: none;
+  }
 
-    form {
-        font-size: 1.2rem;
-        width: 80%;
-    }
+  form {
+    font-size: 1.2rem;
+    width: 80%;
+  }
 
-    .user,
-    .password {
-        width: 80%;
-    }
+  .user,
+  .password {
+    width: 80%;
+  }
 
-    .user input::placeholder,
-    .password input::placeholder {
-        font-size: 1.1rem;
-    }
+  .user input::placeholder,
+  .password input::placeholder {
+    font-size: 1.1rem;
+  }
 
-    .submit-button {
-        width: 40%;
-
-    }
-
+  .submit-button {
+    width: 40%;
+  }
 }
