--- a/styles/addVehicleToClient.css
+++ b/styles/addVehicleToClient.css
@@ -44,13 +44,88 @@ main {
 }
 
 form {
+  width: 70%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: top;
   gap: 2rem;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100vw;
+  height: 100vh;
+}
+
 .client-info {
-  width: 90%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-client {
+  font-size: 1.5rem !important;
+}
+.form-box1 {
+  width: 70%;
+  height: 14rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-box2 {
+  display: none;
+  transition: all 5s linear;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons-choice-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.button-choice {
+  width: 40%;
+  height: 2.5rem;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.3s linear;
+  font-weight: 600;
+}
+
+.button-choice:hover {
+  filter: brightness(1.09);
+  transition: all 0.3s linear;
+  transform: scale(1.02);
+}
+
+.button-choice.yes {
+  background-color: var(--green-light);
+}
+
+.button-choice.no {
+  background-color: var(--red-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+}
+
+.button-choice.no:hover {
+  cursor: pointer;
 }
 
 .form-box1,
