--- a/styles/viewClient.css
+++ b/styles/viewClient.css
@@ -58,6 +58,7 @@ form {
   background-color: var(--text-light);
   padding: 2rem;
   border-radius: 5px;
+  padding-left: 2rem !important;
 }
 
 .form-box1 h2,
@@ -93,50 +94,43 @@ label {
   margin: 1rem 0rem 0rem 0rem;
 }
 
-.inputs-radio {
-  display: flex;
-}
-
-.buttons-group {
-  display: flex;
-  justify-content: flex-end;
-  gap: 2rem;
-}
-
 .clear-button {
-  background-color: var(--dark-blue-text);
+  background-color: var(--dark-blue-text) !important;
   border: none;
-  transition: all 0.2s linear;
-  width: 8%;
+  text-decoration: none;
+  transition: all 0.4s linear;
   font-weight: 600;
   color: var(--text-light) !important;
+  font-weight: 600 !important;
+  width: 10% !important;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  gap: 1rem;
 }
 
 .clear-button:hover {
   background-color: var(--dark-blue-text);
-  transform: scale(1.022);
-  transition: all 0.2s linear;
+  transform: scale(1.06);
+  transition: all 0.3s linear;
 }
 
-.submit-button {
-  background-color: var(--green-light);
-  border: none;
-  transition: all 0.2s linear;
-  width: 13%;
-  height: 2.6rem !important;
+.clear-button i {
+  margin-right: 0.5rem;
+}
+
+.title-info {
+  margin: 0 !important;
+  font-weight: 700;
+  margin-top: 1rem !important;
+}
+
+.table-list {
+  background-color: var(--text-light);
+  padding: 2rem;
+  padding-left: 2rem !important;
+}
+
+.table-list h2 {
+  font-size: 1.2rem;
+  color: var(--text-dark) !important;
   font-weight: 600;
-}
-
-.submit-button:hover {
-  background-color: var(--green-light);
-  transform: scale(1.022);
-  transition: all 0.2s linear;
-}
-
-.check-box-client {
-  width: 1.3rem;
-  height: 1.3rem;
 }
