--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -25,9 +25,7 @@ header h1 {
   font-size: 1.5rem;
   margin: 0;
   font-weight: 600;
-
 }
-
 
 main {
   width: 100vw;
@@ -38,14 +36,11 @@ main {
   padding-top: 4rem;
 }
 
-
 .main-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-between;
 }
-
-
 
 /****** BOX 1 - BOX/BUTTON ******/
 .box1 {
@@ -78,7 +73,6 @@ main {
   text-decoration: none;
 }
 
-
 .car-entry-button {
   background-color: var(--green-light);
 }
@@ -104,18 +98,22 @@ main {
   gap: 1rem;
 }
 
+.sect1 p,
+.sect2 p {
+  margin: 0;
+}
+
 /*********  BOX 2 ***********/
 
 .box2 {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem
+  gap: 1.5rem;
 }
 
 .sect2 a {
   text-decoration: none;
 }
-
 
 /* Next Out Box */
 .next-out {
@@ -138,7 +136,6 @@ main {
   border: 1px solid var(--icon-light);
   width: 100%;
 }
-
 
 /* Occupation Box */
 .occupation {
@@ -188,11 +185,13 @@ main {
 .busy-slots {
   border: 10px solid var(--red-light);
   color: var(--red-light);
-
 }
 
 .free-slots {
-
   color: var(--green-light);
   border: 10px solid var(--green-light);
+}
+
+.buttons-section img {
+  height: 3.4rem;
 }
