--- a/styles/addCompany.css
+++ b/styles/addCompany.css
@@ -6,7 +6,14 @@ body {
   /* gap: 8rem; */
   align-items: center;
   /* justify-content: center; */
-  background-color: var(--bg-gray) !important;
+  background-image: linear-gradient(
+    to left bottom,
+    #c7c6c6,
+    #bfbebf,
+    #b7b7b7,
+    #b0afb0,
+    #a8a8a8
+  );
 }
 
 .addUser-header {
