--- a/styles/addVehicleToClient.css
+++ b/styles/addVehicleToClient.css
@@ -11,6 +11,14 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
+  background-image: linear-gradient(
+    to left bottom,
+    #c7c6c6,
+    #bfbebf,
+    #b7b7b7,
+    #b0afb0,
+    #a8a8a8
+  );
 }
 
 header {
