--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -4,7 +4,15 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: var(--bg-gray);
+  /* background-color: var(--bg-gray); */
+  background-image: linear-gradient(
+    to left bottom,
+    #c7c6c6,
+    #bfbebf,
+    #b7b7b7,
+    #b0afb0,
+    #a8a8a8
+  );
 }
 
 header {
@@ -33,13 +41,15 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 4rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
 }
 
 .main-content {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
+  grid-template-columns: 1.4fr 1fr 1.4fr;
+  gap: 1rem;
+  justify-content: center;
 }
 
 /****** BOX 1 - BOX/BUTTON ******/
@@ -47,9 +57,7 @@ main {
   display: flex;
   justify-content: center;
   gap: 2rem;
-  width: 90%;
   background-color: var(--text-light);
-  margin-right: 2rem;
   border-radius: 5px;
   padding-top: 3rem;
 }
@@ -194,4 +202,26 @@ main {
 
 .buttons-section img {
   height: 3.4rem;
+}
+
+/********** Box 3 ***********/
+.box3 {
+  background-color: var(--text-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
+  margin-right: 1rem;
+  gap: 0.5rem;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.box3 h2 {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.box3 .line {
+  width: 100%;
 }
