--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -2,17 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;   */
+  overflow-x: none;
+  padding-top: 4rem;
+  /* height: 100vh; */
   /* background-color: var(--bg-gray); */
-  background-image: linear-gradient(
-    to left bottom,
-    #c7c6c6,
-    #bfbebf,
-    #b7b7b7,
-    #b0afb0,
-    #a8a8a8
-  );
 }
 
 header {
@@ -25,7 +19,7 @@ header {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -36,22 +30,34 @@ header h1 {
 }
 
 main {
-  width: 100vw;
-  height: 100vh;
+  width: 90vw;
+  /* height: 100vh; */
   display: flex;
+  flex-direction: column;
+  /* gap: 2rem; */
   align-items: center;
   justify-content: center;
   padding-top: 1rem;
-  padding-left: 1rem;
 }
 
 .main-content {
-  display: grid;
-  grid-template-columns: 1.4fr 1fr 1.4fr;
-  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   justify-content: center;
 }
 
+.main-box1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
+
+.main-box2 {
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+}
 /****** BOX 1 - BOX/BUTTON ******/
 .box1 {
   display: flex;
@@ -114,8 +120,10 @@ main {
 /*********  BOX 2 ***********/
 
 .box2 {
-  display: flex;
+  display: grid;
   flex-direction: column;
+  grid-template-rows: 1fr 1fr;
+  grid-column: initial;
   gap: 1.5rem;
 }
 
@@ -154,6 +162,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  margin-bottom: 3rem;
 }
 
 .occupation h2 {
@@ -205,23 +215,96 @@ main {
 }
 
 /********** Box 3 ***********/
-.box3 {
+.movements {
   background-color: var(--text-light);
   display: flex;
   flex-direction: column;
   justify-content: top;
   align-items: center;
-  margin-right: 1rem;
   gap: 0.5rem;
   border-radius: 5px;
   padding: 1rem;
+  width: 100%;
 }
 
-.box3 h2 {
+.movements h2 {
   font-size: 1.2rem;
   font-weight: 500;
 }
 
-.box3 .line {
+.movements .line {
   width: 100%;
+}
+
+/******** Occupation Boxes  **********/
+.boxes-occupation {
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.box-occu {
+  background-color: rgb(204, 204, 204);
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  width: 14rem;
+}
+
+.box-occu-header {
+  background-color: var(--green-light);
+  padding: 0.5rem;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.line-info {
+  display: flex;
+  margin: 2rem 1rem;
+  flex-direction: column;
+}
+
+.line-info p {
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 0.3rem;
+}
+
+.line-info span {
+  color: var(--green-light);
+  font-weight: 700;
+}
+
+.line-occupation {
+  background-color: rgb(116, 115, 115);
+  width: 100%;
+  height: 1.8rem;
+}
+
+.fill-line {
+  background-color: var(--green-light);
+  width: 67%;
+  height: 100%;
+}
+
+@media (max-width: 900px) {
+  .main-content {
+    margin-top: 3rem;
+  }
+
+  .main-box1 {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .main-box2 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
 }
