--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -143,9 +143,12 @@ main {
   background-color: rgb(204, 204, 204);
   display: flex;
   flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
   border-radius: 5px;
   width: 14rem;
   font-size: 70%;
+  padding-bottom: 1rem;
 }
 
 .box-occu-header {
@@ -157,17 +160,24 @@ main {
   align-items: center;
   justify-content: center;
   border-radius: 5px 5px 0px 0px;
+  width: 100%;
 }
 
 .boxes-occupation {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: center;
   gap: 1.5rem;
 }
 
 .line-info {
   display: flex;
-  margin: 2rem 1rem;
+  margin: 2rem 0rem;
   flex-direction: column;
+  width: 80%;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .line-info p {
@@ -194,10 +204,15 @@ main {
 }
 
 .select-section-button {
-  background-color: orange;
+  background-color: #109cf1;
   width: 80%;
   height: 2rem;
   border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: white !important;
 }
 
 /******************** MODAL *********************/
@@ -249,7 +264,7 @@ main {
 
 .modal-body-1 i {
   font-size: 3.5rem;
-  color: #ffb03f;
+  color: #109cf1 !important;
 }
 
 .modal-body-2 {
