--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -27,13 +27,21 @@ body {
 }
 
 main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100vw;
+  height: 100vh;
+  align-items: flex-start;
+  padding: 6rem;
+  padding-top: 4.3rem;
+  gap: 1rem;
+}
+
+.box-left {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100vw;
-  height: 100vh;
-  align-items: center;
-  padding: 6rem;
 }
 
 .checkin-box,
@@ -41,7 +49,7 @@ main {
   background-color: var(--text-light);
   border-radius: 5px;
   padding: 2rem 4rem;
-  width: 70%;
+  margin: 0;
 }
 
 .checkin-box h2,
@@ -111,6 +119,17 @@ main {
   justify-content: center;
 }
 
+.header.box2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+.header.box2 h2 {
+  margin: 0;
+}
+
 /* Check-in Button */
 .checkin-button {
   border: none;
@@ -137,6 +156,7 @@ main {
 
 .delete-checkin-button:hover {
   filter: brightness(1.08);
+  cursor: pointer;
 }
 
 .box-occu {
@@ -213,6 +233,17 @@ main {
   justify-content: center;
   text-decoration: none;
   color: white !important;
+}
+
+/******************* BOX RIGHT  ********************/
+.box-right {
+  background-color: var(--text-light);
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.box-right .header-box h2 {
+  font-size: 1.3rem;
 }
 
 /******************** MODAL *********************/
@@ -303,4 +334,8 @@ main {
 
 .button-confirm-modal:hover {
   background-color: #d82244;
+}
+
+.alert {
+  width: 50%;
 }
