--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -41,7 +41,12 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
   gap: 1rem;
+}
+
+.checkin-historic-box {
+  height: 100%;
 }
 
 .checkin-box,
@@ -54,9 +59,13 @@ main {
 
 .checkin-box h2,
 .checkin-historic-box h2 {
-  font-size: 1.2rem !important;
+  font-size: 1.4rem !important;
   font-weight: 600;
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
+}
+
+.checkin-historic-box .pagination {
+  margin-top: 1.3rem !important;
 }
 
 /* Search Input */
@@ -146,12 +155,12 @@ main {
   text-decoration: none;
   background-color: var(--red-light);
   padding: 0.4rem 1rem 0.4rem 1rem;
-  /* height: 100%; */
   border-radius: 5px;
   color: var(--text-light) !important;
   font-weight: 600;
   font-size: 0.8rem;
-  margin-top: 1rem;
+  height: 100%;
+  margin: 0;
 }
 
 .delete-checkin-button:hover {
@@ -238,13 +247,15 @@ main {
 /******************* BOX RIGHT  ********************/
 .box-right {
   background-color: var(--text-light);
-  padding: 1rem;
+  padding: 2rem 4rem;
   border-radius: 5px;
   height: 100%;
 }
 
 .box-right .header-box h2 {
-  font-size: 1.3rem;
+  font-size: 1.4rem !important;
+  font-weight: 600;
+  margin-bottom: 1.3rem;
 }
 
 .checkout-button {
@@ -282,6 +293,15 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.modal-content.cancelCheckin {
+  height: 60vh;
+  width: 45vw !important;
+}
+
+.modal-header.cancelCheckin {
+  width: 45vw !important;
 }
 
 .modal-content.checkout {
@@ -363,6 +383,12 @@ main {
   gap: 4rem;
 }
 
+.info-checkin-cancel {
+  color: var(--dark-blue-text);
+  display: flex;
+  gap: 4rem;
+}
+
 .info-col-1,
 .info-col-2 {
   display: flex;
@@ -392,6 +418,38 @@ main {
 .checkout-img {
   width: 14%;
   height: 24%;
+}
+
+/****************** Modal confirm cancel check-in  ****************/
+.modal-body-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.modal-body-header i {
+  color: var(--red-light);
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.cancel-reason-box {
+  margin-top: 1.7rem;
+}
+
+.cancel-reason-box h5 {
+  font-size: 1.1rem;
+  color: var(--dark-blue-text);
+}
+
+#cancelReasonInput {
+  padding: 0.4rem;
+  border-radius: 5px;
+  border-color: var(--dark-blue-text);
+  outline-color: var(--dark-blue-text);
+  color: var(--dark-blue-text);
 }
 
 .alert {
