--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -53,8 +53,12 @@ main {
 .checkin-historic-box {
   background-color: var(--text-light);
   border-radius: 5px;
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
   margin: 0;
+  -webkit-box-shadow: 6px 6px 16px -2px #6d6b6b,
+    6px 6px 16px -2px rgba(202, 202, 202, 0);
+  box-shadow: 6px 6px 16px -2px #6d6b6b,
+    6px 6px 16px -2px rgba(202, 202, 202, 0);
 }
 
 .checkin-box h2,
@@ -247,9 +251,13 @@ main {
 /******************* BOX RIGHT  ********************/
 .box-right {
   background-color: var(--text-light);
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
   border-radius: 5px;
   height: 100%;
+  -webkit-box-shadow: 6px 6px 16px -2px #6d6b6b,
+    6px 6px 16px -2px rgba(202, 202, 202, 0);
+  box-shadow: 6px 6px 16px -2px #6d6b6b,
+    6px 6px 16px -2px rgba(202, 202, 202, 0);
 }
 
 .box-right .header-box h2 {
@@ -258,16 +266,18 @@ main {
   margin-bottom: 1.3rem;
 }
 
-.checkout-button {
-  background-color: #d46019;
+.checkout-button img {
+  width: 40%;
+  height: 60%;
+  /* background-color: #d46019; */
 
-  border: none;
+  /* border: none;
   text-decoration: none;
   padding: 0.4rem 1rem 0.4rem 1rem;
   border-radius: 5px;
   color: var(--text-light) !important;
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.8rem; */
 }
 
 /******************** MODAL *********************/
@@ -389,6 +399,10 @@ main {
   gap: 4rem;
 }
 
+.header-box.checkout-box {
+  display: flex;
+  justify-content: space-between;
+}
 .info-col-1,
 .info-col-2 {
   display: flex;
@@ -444,7 +458,8 @@ main {
   color: var(--dark-blue-text);
 }
 
-#cancelReasonInput {
+#cancelReasonInput,
+#cancelCkOutReasonInput {
   padding: 0.4rem;
   border-radius: 5px;
   border-color: var(--dark-blue-text);
