--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -1,6 +1,6 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  /* height: 100vh; */
   display: flex;
   background-color: var(--bg-gray);
   align-items: center;
@@ -16,7 +16,7 @@ body {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -30,7 +30,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   align-items: flex-start;
   padding: 6rem;
   padding-top: 4.3rem;
@@ -469,4 +469,15 @@ main {
 
 .alert {
   width: 80%;
+}
+
+/**********  MEDIA QUERY ***************/
+@media (max-width: 100px) {
+  .body-checkin {
+    width: 100% !important;
+    height: 100% !important;
+    display: flex;
+    background-color: var(--bg-gray);
+    align-items: center;
+  }
 }
