--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@
 
 /*********** Box 1 **********/
 .box1 {
-  background-color: var(--bg-gray);
+  background-color: var(--icon-light);
   height: 100vh;
   display: flex;
   align-items: center;
