--- a/styles/listUsers.css
+++ b/styles/listUsers.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   /* justify-content: center; */
   background-color: var(--bg-gray);
+  overflow: none;
 }
 
 .list-users-header {
@@ -19,7 +20,7 @@ body {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -36,17 +37,15 @@ main {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  padding-top: 2rem;
 }
 
 .main-content {
   width: 80%;
-  height: 100vh;
   display: flex;
   /* justify-content: center; */
-  margin-top: 5rem;
-  height: 100vh;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
   /* margin-top: 1.5rem; */
 }
 
@@ -78,7 +77,7 @@ main {
   color: var(--text-light) !important;
   border-radius: 5px;
   font-weight: 600;
-  width: 15%;
+  width: 14rem;
   display: flex;
   align-items: center;
   justify-content: center;
