--- a/styles/prkSection.css
+++ b/styles/prkSection.css
@@ -1,6 +1,4 @@
 body {
-  width: 100vw;
-  height: 100vh;
   display: flex;
   /* padding: 0rem 4rem 0rem 4rem; */
   /* flex-direction: column; */
@@ -17,6 +15,7 @@ body {
     #b0afb0,
     #a8a8a8
   );
+  padding: 3rem 0rem;
 }
 
 .addUser-header {
@@ -29,7 +28,7 @@ body {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -44,7 +43,6 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80vh;
   width: 80vw;
 }
 
