--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ body {
 /*///////////////////////////////////////////////////////*/
 
 .alert.message {
-  position: absolute;
+  position: fixed;
   top: 0;
   right:0;
   z-index: 20;
