--- a/styles/addClient.css
+++ b/styles/addClient.css
@@ -7,7 +7,7 @@
 .addClient-body {
   display: flex;
   width: 100vw;
-  max-width: 100vw;
+  /* max-width: 100vw; */
   height: 100vh;
   align-items: center;
   justify-content: center;
@@ -30,7 +30,7 @@ header {
   padding: 0rem 0rem 0rem 1rem;
   height: 5vh;
   font-size: 0.8rem !important;
-  z-index: 3;
+  z-index: 6;
   position: fixed;
   top: 0;
 }
@@ -47,7 +47,7 @@ main {
   justify-content: center;
   width: 100vw;
   background-color: var(--bg-gray);
-  height: 100vh;
+  height: 100%;
   padding-top: 6rem;
 }
 
