--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -239,8 +239,10 @@ main {
 }
 
 .boxes-occupation {
-  display: flex;
-  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  width: 100%;
+  height: 100%;
 }
 .free-slots,
 .busy-slots {
@@ -303,7 +305,7 @@ main {
 
 /******** Occupation Boxes  **********/
 .boxes-occupation {
-  display: flex;
+  /* display: flex; */
   gap: 1rem;
   margin-top: 2rem;
 }
@@ -371,5 +373,14 @@ main {
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+  }
+
+  .occupation {
+    padding: 1.5rem 5rem 5rem 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
   }
 }
