--- a/styles/listVehicles.css
+++ b/styles/listVehicles.css
@@ -54,6 +54,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  gap: 1rem;
 }
 
 .submit-button {
@@ -129,4 +130,17 @@ main {
 .trash {
   color: var(--red-light);
   opacity: 0.9;
+}
+
+.reactivate {
+  color: var(--green-light);
+}
+
+.button-confirm-modal.react {
+  background-color: var(--green-light);
+}
+
+.button-confirm-modal.react:hover {
+  background-color: var(--green-light);
+  filter: brightness(1.08);
 }
