--- a/styles/listUsers.css
+++ b/styles/listUsers.css
@@ -37,22 +37,28 @@ main {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  padding-top: 2rem;
 }
 
 .main-content {
   width: 80%;
   display: flex;
-  /* justify-content: center; */
   flex-direction: column;
   gap: 1rem;
-  /* margin-top: 1.5rem; */
+}
+
+div.container {
+  width: 100% !important;
+}
+
+.main-list-users {
+  height: 80vh;
 }
 
 .button-box {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 1rem;
 }
 
 .message-box {
@@ -132,4 +138,17 @@ main {
 .trash {
   color: var(--red-light);
   opacity: 0.9;
+}
+
+.reactivate {
+  color: var(--green-light);
+}
+
+.button-confirm-modal.reac {
+  background-color: var(--green-light);
+}
+
+.button-confirm-modal.reac:hover {
+  background-color: var(--green-light);
+  filter: brightness(1.08);
 }
