--- a/styles/viewClient.css
+++ b/styles/viewClient.css
@@ -22,7 +22,7 @@ header {
   padding: 0rem 0rem 0rem 1rem;
   height: 5vh;
   font-size: 0.8rem !important;
-  z-index: 3;
+  z-index: 5;
   position: fixed;
   top: 0;
 }
@@ -126,7 +126,8 @@ label {
 .table-list {
   background-color: var(--text-light);
   padding: 2rem;
-  padding-left: 2rem !important;
+  padding-left: 0rem !important;
+  margin-top: 2rem;
 }
 
 .table-list h2 {
