--- a/styles/prkSection.css
+++ b/styles/prkSection.css
@@ -18,6 +18,15 @@ body {
   padding: 3rem 0rem;
 }
 
+body {
+  display: flex;
+  align-items: flex-start;
+  padding-top: 5rem;
+  justify-content: center;
+  height: 100vh;
+  padding-left: 4rem;
+}
+
 .addUser-header {
   width: 100vw;
   display: flex;
@@ -40,21 +49,41 @@ body {
 
 main {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
-  align-items: center;
-  width: 80vw;
+  /* align-items: center; */
+  width: 95vw;
+}
+
+.parking-section-main {
+  display: flex !important;
+  gap: 2rem !important;
 }
 
 .main-content {
   background-color: var(--text-light);
   padding: 3rem;
   border-radius: 5px;
-  width: 80%;
+  /* width: 80%; */
 }
 
 .main-content h2 {
   font-size: 1.5rem;
+}
+
+.box1 {
+  width: 50%;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.box2 {
+  width: 50%;
+  background-color: var(--text-light);
+  /* height: 100%; */
+  border-radius: 5px;
 }
 
 .submit-box {
@@ -62,6 +91,8 @@ main {
   display: flex;
   gap: 1rem;
   margin-top: 2rem !important;
+  width: 100%;
+  padding: 0rem !important;
 }
 
 .submit-user-button {
@@ -99,12 +130,6 @@ main {
   transform: scale(1.02);
   transition: all 0.3s linear;
   filter: brightness(1.09);
-}
-
-.parking-section-main {
-  display: flex !important;
-  /* flex-direction: row !important; */
-  gap: 2rem !important;
 }
 
 .action-buttons {
@@ -185,4 +210,93 @@ select:focus {
 
 .select-op5 {
   background-color: #109cf1;
+}
+
+/************* BOX 2  ****************/
+.box2 {
+  padding: 3rem;
+  height: 81vh;
+}
+
+.box2 h2 {
+  font-size: 1.5rem;
+}
+
+.box2 h3 {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.prices-box {
+  display: flex;
+}
+.car-prices,
+.motorcycle-prices {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* border: 1px solid green; */
+  gap: 1rem;
+}
+
+.price-car,
+.motorcycle-price {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price-car,
+.motorcycle-price {
+  border-bottom: 1px dotted var(--gray-light);
+}
+
+.price-car p,
+.motorcycle-price p {
+  width: 50%;
+  margin: 0;
+}
+
+.input-price-box {
+  display: flex;
+  height: 100%;
+  width: 30%;
+}
+
+.input-price-box input {
+  height: 90%;
+  /* margin-bottom: 0.2rem; */
+  width: 100%;
+  padding-left: 0.4rem;
+}
+
+.buttons-price {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 5rem;
+  margin-top: 2rem;
+}
+
+.btn-price {
+  border: none;
+  background-color: var(--blue-light);
+  padding: 0.5rem 0.8rem;
+  border-radius: 5px;
+  color: var(--text-light);
+  font-weight: 600;
+  transition: all 0.3s linear;
+  width: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.btn-price:hover {
+  transform: scale(1.02);
+  transition: all 0.3s linear;
+  filter: brightness(1.09);
 }
