--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -495,6 +495,20 @@ main {
   width: 80%;
 }
 
+/************ Checkout Price  *************/
+.modal-checkout-price {
+  display: none;
+}
+
+.modal-checkout-price.open {
+  display: flex;
+  position: absolute;
+  z-index: 10;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
 /**********  MEDIA QUERY ***************/
 @media (max-width: 100px) {
   .body-checkin {
