--- a/styles/relatorioPdf.css
+++ b/styles/relatorioPdf.css
@@ -1,12 +1,15 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  max-width: 100vw;
+  /* height: 100%; */
   display: flex;
   /* flex-direction: column; */
   /* gap: 8rem; */
-  align-items: center;
+  align-items: flex-start;
   /* justify-content: center; */
   background-color: var(--bg-gray);
+  overflow-x: none;
+  padding-bottom: 2rem;
 }
 
 .relat-header {
@@ -19,7 +22,7 @@ body {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -34,20 +37,21 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh; */
+  width: 100%;
+  overflow-x: none;
 }
 
 .main-content {
-  width: 80%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   /* justify-content: center; */
   margin-top: 5rem;
-  height: 100vh;
+  /* height: 100vh; */
   flex-direction: column;
   gap: 1.5rem;
   /* margin-top: 1.5rem; */
+  overflow-x: none;
 }
 
 .button-box {
@@ -87,25 +91,81 @@ main {
   transition: all 0.2s linear;
 }
 
-/*********** Inputs Box ******************/
-.form-relat {
+.content-relat {
   background-color: var(--text-light);
-  padding: 2rem;
   border-radius: 5px;
+  padding: 2rem;
+  /* margin-bottom: 3rem; */
 }
 
-#form-clients,
-#form-vehicles,
-#form-checkins,
-#form-checkouts,
-#form-companys,
-#form-users {
-  display: none;
+/************* Header Relat **************/
+.header-relat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-label {
-  margin: 0 !important;
-  margin-top: 1rem !important;
-  color: var(--text-dark) !important;
+.header-relat-title {
+  display: grid;
+  grid-template-columns: 0.5fr 1fr 0.2fr;
+  justify-content: space-between;
+  /* border: 1px solid green; */
+  width: 100%;
+}
+
+.header-relat h1 {
+  font-size: 2rem;
+  margin-bottom: 1.3rem;
+  margin: 0;
+}
+.img-logo {
+  width: 5rem;
+  height: 5rem;
+}
+
+.box-info-head {
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  font-size: 0.7rem;
+}
+
+.info-col-1 {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.info-col-2 {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.info-col-1,
+.info-col-2 {
+  color: var(--blue-dark);
   font-weight: 600;
+}
+
+.info-col-1 span,
+.info-col-2 span {
+  color: var(--blue-dark);
+  font-weight: 400;
+}
+.line-div {
+  width: 100%;
+  display: flex;
+  border: 1px solid var(--gray-light);
+  opacity: 0.3;
+}
+
+.btn-pdf {
+  background-color: var(--blue-light);
+  border: none;
+  color: var(--text-light);
+  border-radius: 5px;
+  height: 3rem;
+  width: 20%;
 }
