--- a/styles/addClient.css
+++ b/styles/addClient.css
@@ -7,8 +7,22 @@
 .addClient-body {
   display: flex;
   width: 100vw;
-  /* max-width: 100vw; */
+  max-width: 100vw;
   height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(
+    to left bottom,
+    #c7c6c6,
+    #bfbebf,
+    #b7b7b7,
+    #b0afb0,
+    #a8a8a8
+  );
+}
+
+.addVehicle-body {
+  display: flex;
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(
@@ -45,8 +59,8 @@ main {
   display: flex;
   padding: 3rem;
   justify-content: center;
-  width: 100vw;
-  background-color: var(--bg-gray);
+  /* width: 100vw; */
+  /* background-color: var(--bg-gray); */
   height: 100%;
   padding-top: 6rem;
 }
@@ -133,7 +147,7 @@ label {
   background-color: var(--green-light);
   border: none;
   transition: all 0.2s linear;
-  width: 13%;
+  width: 17%;
   height: 2.6rem !important;
   font-weight: 600;
 }
@@ -169,3 +183,10 @@ label {
   color: red;
   font-weight: 600;
 }
+
+/********** MEDIA QUERY **********/
+/* @media (max-width: 1700px) {
+  main {
+    zoom: 0.95;
+  }
+} */
