--- a/styles/relatorioPdf.css
+++ b/styles/relatorioPdf.css
@@ -190,6 +190,26 @@ main {
   display: flex;
 }
 
+.graph1-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.graph1-box h4 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: black;
+}
+
+.graph-1,
+.graph-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .title-graph {
   font-size: 1.5rem;
   color: black;
@@ -214,4 +234,11 @@ main {
 
 .graph2 {
   margin-top: 2rem;
+}
+
+/********** MEDIA QUERY **********/
+@media (max-width: 1700px) {
+  main {
+    zoom: 0.8;
+  }
 }
