--- a/styles/relatorio.css
+++ b/styles/relatorio.css
@@ -1,10 +1,10 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  /* height: 100vh; */
   display: flex;
   /* flex-direction: column; */
   /* gap: 8rem; */
-  align-items: center;
+  align-items: flex-start;
   /* justify-content: center; */
   background-color: var(--bg-gray);
 }
@@ -19,7 +19,7 @@ body {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -34,20 +34,20 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
 }
 
 .main-content {
-  width: 80%;
-  height: 100vh;
+  width: 90%;
+  /* height: 100vh; */
   display: flex;
   /* justify-content: center; */
-  margin-top: 5rem;
-  height: 100vh;
+  /* height: 100vh; */
   flex-direction: column;
-  gap: 1.5rem;
-  /* margin-top: 1.5rem; */
+  gap: 0.3rem;
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .button-box {
@@ -87,11 +87,75 @@ main {
   transition: all 0.2s linear;
 }
 
+/*********** Relatórios Rápidos ******************/
+.relats-buttons-box {
+  display: flex;
+  justify-content: space-between;
+  gap: 2em;
+  /* border: 1px solid green; */
+}
+
+.box-relat-rapid {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+.title-box-relat {
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-top: 1rem;
+}
+
+.client-relat-box {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.client-relat-box a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  /* border: 1px solid blue; */
+  background-color: var(--blue-light);
+  color: var(--text-light);
+  font-weight: 500;
+  border-radius: 5px;
+  height: 2.5rem;
+  padding: 0.3rem;
+  width: 10rem;
+  height: 3.4rem;
+}
+
+.relat-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.relat-btn span {
+  color: var(--text-light);
+  font-weight: 600;
+}
+
+.relat-btn i {
+  color: var(--text-light);
+  font-size: 1.1rem;
+}
+
 /*********** Inputs Box ******************/
 .form-relat {
   background-color: var(--text-light);
   padding: 2rem;
   border-radius: 5px;
+}
+
+.form-relat h5 {
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 
 #form-clients,
@@ -144,4 +208,12 @@ label {
 
 .radiu-2 {
   margin-left: 0.5rem !important;
+}
+
+.line-div {
+  width: 100%;
+  display: flex;
+  border: 1px solid var(--gray-light);
+  opacity: 0.3;
+  margin: 2rem 0rem 2rem 0rem;
 }
